# emu

./: .gitignore  CMakeLists.txt  Emulator GANTT chart.xlsx  Makefile  README.md  build.sh
app/: Emulator.cpp  Emulator.h  EmulatorDisplay.cpp  EmulatorDisplay.h  Snake.cpp  Snake.h  SnakeGUI.cpp  SnakeGUI.h  imgui.ini  main.cpp  snake.nes
app/SDL/: SDLApp.cpp  SDLApp.h  imgui.ini
app/display/: EmulatorDisplay.cpp  EmulatorDisplay.h  NESDisplay.cpp  NESDisplay.h
app/display/SDL/: SDLApp.cpp  SDLApp.h
asm/: default.s  nes.cfg
core/cpu/: CPU.cpp  CPU.h  CPURegisters.cpp  CPURegisters.h  CPU_AddressingModes.cpp  CPU_Opcodes.cpp  RAM.cpp  RAM.h  cpu.cpp  cpu.h  imgui.ini
core/loader/: Loader.cpp  Loader.h  Palette.cpp  Palette.h  ROM.cpp  ROM.h  imgui.ini
core/memory/: Bus.cpp  Bus.h  CPUmem.cpp  CPUmem.h  RAM.cpp  RAM.h
core/ppu/: IPPURegister.h  PPU.cpp  PPU.h  PPURegisters.cpp  PPURegisters.h
core/ppu/registers/: IPPURegister.h  OAMADDR.h  OAMDATA.h  OAMDMA.h  PPUADDR.h  PPUCTRL.h  PPUDATA.h  PPUMASK.h  PPUSCROLL.h  PPUSTATUS.h
demos/: NESDisplay.cpp  NESDisplay.h  Snake.cpp  Snake.h
imgui/: imgui.ini
include/: Path.h  typedefs.h
src/app/: Emulator.cpp  Emulator.h  main.cpp
src/app/display/: ConfigQueue.cpp  ConfigQueue.h  EmulatorDisplay.cpp  EmulatorDisplay.h  NESDisplay.cpp  NESDisplay.h  RecentFileQueue.cpp  RecentFileQueue.h
src/app/display/SDL/: SDLApp.cpp  SDLApp.h
src/app/display/SDL/controllers/: ControllerHandler.cpp  ControllerHandler.h  Ports.cpp  Ports.h
src/app/display/ui/: AddCodeWindow.cpp  AddCodeWindow.h  CPURegWindow.cpp  CPURegWindow.h  CodeListWindow.cpp  CodeListWindow.h  ControllerWindow.cpp  ControllerWindow.h  ErrorMsgWindow.cpp  ErrorMsgWindow.h  GameGenieWindow.cpp  GameGenieWindow.h  IGUIWindow.h  MainMenuBar.cpp  MainMenuBar.h  SelectFileWindow.cpp  SelectFileWindow.h  UIManager.cpp  UIManager.h
src/core/cheats/: GameGenie.cpp  GameGenie.h
src/core/controller/: Joypad.cpp  Joypad.h
src/core/cpu/: CPU.cpp  CPU.h  CPURegisters.cpp  CPURegisters.h  CPU_AddressingModes.cpp  CPU_Opcodes.cpp  Disassembler.cpp  Disassembler.h  nestest_no_asm.sh
src/core/loader/: DatabaseHandler.cpp  DatabaseHandler.h  Loader.cpp  Loader.h  Palette.cpp  Palette.h  ROM.cpp  ROM.h
src/core/memory/: Bus.cpp  Bus.h
src/core/ppu/: PPU.cpp  PPU.h
src/core/ppu/registers/: IPPURegister.h  OAMADDR.h  OAMDATA.h  OAMDMA.h  PPUADDR.h  PPUCTRL.h  PPUDATA.h  PPUMASK.h  PPUSCROLL.h  PPUSTATUS.h
src/include/: Config.h  Logger.cpp  Logger.h  pch.h  typedefs.h
src/include/mINI/: ini.h
